--- a/LandePage/style.css
+++ b/LandePage/style.css
@@ -88,6 +88,45 @@ p {
   gap: 16px;
 }
 
+.question-container {
+  margin: 1.2rem;
+}
+
+.question-container p {
+  font-weight: 900;
+  font-size: 1.3rem;
+  color: #5f5f5f;
+}
+
+.question-container .anwser {
+  font-size: 400;
+  font-size: 1.2rem;
+  color: #747070;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  padding: 3rem;
+  margin-left: 4.2rem;
+}
+
+.question-container .disabled {
+  display: none;
+}
+
+.btn-add {
+  width: 2rem;
+  height: 2rem;
+  color: #fff;
+  background-color: #404040;
+  border-radius: 50%;
+  border: none;
+  margin: 0.8rem;
+  cursor: pointer;
+}
+
+.btn-add:focus {
+  outline: none;
+}
+
 /* footer */
 #footer {
   background: #404040;
